# Bioengineering-Workshops

./: .gitignore  CMakeLists.txt  Exercises.md  README.md
matlab/: control_flow.m  graph_2d.m  graph_3d.m  plotLine.asv  plotLine.m  plotQuadratic.m  plotQuadraticScript.m
src/: ex0.c  ex1.c  ex2.c  ex3.c  ex4.c  ex5.c  ex6.c  ex7.c  helper.h  main.cpp  main_args.c  read_name.c
