cmake_minimum_required(VERSION 3.22)

project(C-Workshops)

add_executable(Ex0 src/ex0.c)
add_executable(Ex1 src/ex1.c)
add_executable(Ex2 src/ex2.c)
add_executable(Ex3 src/ex3.c)
add_executable(Ex4 src/ex4.c)
add_executable(Ex5 src/ex5.c)
add_executable(Ex6 src/ex6.c)
add_executable(Ex7 src/ex7.c)
